# DiskManager

./: CMakeLists.txt  FileScanner.cpp  FileScanner.h  FileSystemHandler.cpp  FileSystemHandler.h  README.md  charthandler.cpp  charthandler.h  contextmenuhandler.cpp  contextmenuhandler.h  file_details_style.qss  fileanalyzer.cpp  fileanalyzer.h  fileanalyzer.ui  filedetailswidget.cpp  filedetailswidget.h  filedetailswidget.ui  layeredfilescanner.cpp  layeredfilescanner.h  main.cpp  resources.qrc  styles.qss
